Add GET /users/query
